infrastructure/kube-system/cilium/resources/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - name: gateway-internal
      namespace: networking
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - hubble.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
          weight: 1
          group: ""
          kind: Service
